--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,3 +1,4 @@
+
 test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
@@ -7,20 +8,19 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-amazon_dev:
+amazon_development:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: eu-central-1
-  bucket: rok-master--bucket-dev
+  access_key_id: <%= ENV['access_key_id'] %>
+  secret_access_key: <%= ENV['secret_access_key'] %>
+  region: <%= ENV['s3_region'] %>
+  bucket: <%= ENV['rok-master--bucket-dev'] %>
 
-amazon_prod:
+amazon_production:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: eu-central-1
-  bucket: rok-master--bucket-pro
-
+  access_key_id: <%= ENV['access_key_id'] %>
+  secret_access_key: <%= ENV['secret_access_key'] %>
+  region: <%= ENV['s3_region'] %>
+  bucket: <%= ENV['rok-master--bucket-pro'] %>
 
 
 
