--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,22 +12,22 @@ amazon_development:
   service: S3
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['AWS_REGION'] %>
-  bucket: <%= ENV['S3_BUCKET'] %>
+  region: 'eu-central-1'
+  bucket: <%= ENV['BUCKET'] %>
 
 amazon_production:
   service: S3
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['AWS_REGION'] %>
-  bucket: <%= ENV['S3_BUCKET'] %>
+  region: 'eu-central-1'
+  bucket: <%= ENV['BUCKET'] %>
 
 amazon:
   service: S3
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['AWS_REGION'] %>
-  bucket: <%= ENV['S3_BUCKET'] %>
+  region: 'eu-central-1'
+  bucket: <%= ENV['BUCKET'] %>
 
 
 # Remember not to checkin your GCS keyfile to a repository
